<resources>
    <string name="app_name">Air measuring</string>
    <string name="api_url">http://dev.api.projectvietnam.nl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="pref_device_title">Device</string>
    <string name="pref_title_sharing_device">Sharing</string>
    <string name="pref_summary_sharing_device">Share your measurements anonymous with us</string>
    <string name="pref_summary_version_device">1.0.0</string>
    <string name="pref_title_version_device">Device version</string>
</resources>
